fixes mobile spacing issue

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,11 @@
 html, body, #root{
   width: 100%;
   min-height: 100%;
+  height: 100%;
 }
 
 body{
-  min-height: 100%;
+  /* min-height: 100%; */
   min-width: 100%;
   overflow-x: hidden;
 }
